--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "iconsax-react": "^0.0.8",
     "modern-normalize": "^2.0.0",
     "react": "^18.3.1",
