--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
+    "react-router": "^6.25.0",
+    "react-router-dom": "^6.25.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
